[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
axum-macros = "0.3.4"
dotenv = "0.15.0"
futures-lite = "1.12.0"
hyperlocal = "0.8.0"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
clap = { version = "4.1.8", features = ["derive"] }
rand = "0.8.5"
hyper = "0.14.24"

[dependencies.database]
path = "../database"
