[package]
name = "data-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.1"
deadpool = { version = "0.9.5", features = ["managed", "rt_tokio_1", "serde"] }
deadpool-lapin = { version = "0.10.0", features = ["serde"] }
dotenv = "0.15.0"
futures-lite = "1.12.0"
itertools = "0.10.5"
lapin = "2.1.1"
num_cpus = "1.15.0"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dependencies.database]
path = "../database"
